# Nginx-X402

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  common  go.sh  setup-build-env.sh  test_struct_size
.github/workflows/: ci.yml  release.yml
debian/: changelog  control  copyright  postinst  prerm  rules
nginx/: example.conf  x402_ffi.h
rpm/: README.md  nginx-x402.spec
scripts/: check-file-size.sh  collect_signatures.sh  run-clippy.sh
src/: config.rs  ffi.rs  lib.rs  ngx_module.rs
src/config/: mod.rs  validation.rs
src/ngx_module/: commands.rs  config.rs  error.rs  handler.rs  logging.rs  metrics.rs  mod.rs  module.rs  panic_handler.rs  phase_handler.rs  request.rs  requirements.rs  response.rs  runtime.rs
src/ngx_module/commands/: asset.rs  basic.rs  common.rs  mod.rs  network.rs  other.rs
t/: basic.t  payment_verification.t
tests/: Dockerfile.centos.test  Dockerfile.debian.test  Dockerfile.test  README.md  browser_detection_tests.rs  config_validation_tests.rs  docker_integration_test.rs  facilitator_client_pool_tests.rs  integration_test.rs  integration_tests.rs  logging_tests.rs  metrics_tests.rs  mock-backend.py  nginx.test.conf  nginx.test.conf.centos  ngx_module_tests.rs  resource_path_validation_tests.rs  run_integration_tests.sh  runtime_tests.rs  security_tests.rs  start-services.sh  test_random_version.sh  test_signature_validation.sh  timeout_tests.rs  timestamp_logging_tests.rs  validation_unit_tests.rs
tests/docker_integration/: README.md  basic_tests.rs  common.rs  config_tests.rs  content_type_tests.rs  header_passthrough_tests.rs  http_method_tests.rs  mod.rs  proxy_payment_tests.rs  segfault_reproduction_tests.rs  timestamp_tests.rs  ttl_config_tests.rs  websocket_subrequest_tests.rs
tests/integration/: basic.rs  common.rs  config.rs  head.rs  head_cors.rs  http_helpers.rs  mod.rs  options.rs  options_cors.rs  proxy_pass.rs  resource.rs  trace.rs
tests/ngx_module/: address.rs  amount.rs  basic.rs  common.rs  fields.rs  mod.rs  resource.rs  url_building.rs  validation.rs
