[package]
name = "nginx-x402"
version = "1.0.0"
edition = "2021"
description = "Pure Rust Nginx module for x402 HTTP micropayment protocol"
authors = ["Ryan Kung <ryan@polyjuice.io>"]
license = "AGPL-3.0"
repository = "https://github.com/polyjuicelab/Nginx-X402"
homepage = "https://polyjuice.io"
keywords = ["nginx", "payment", "micropayment", "x402", "ngx-rust"]
categories = ["api-bindings", "web-programming"]
readme = "README.md"

[lib]
name = "nginx_x402"
crate-type = ["cdylib", "rlib"]

[dependencies]
rust-x402 = "0.2.2"
serde_json = "1.0"
rust_decimal = "1.36"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }
ngx = "0.5"
prometheus = "0.14"
log = "0.4"

[features]
default = []
# Note: We don't use ngx's vendored feature anymore.
# Instead, we implement our own vendored-like functionality in build scripts
# that automatically detects system nginx version and downloads matching source.
integration-test = []  # Feature for integration tests (requires Docker)

[dev-dependencies]
rust-x402 = "0.2.2"

